apps/production/homeassistant/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: homeassistant-http
  namespace: homeassistant-prod
spec:
  hostnames:
    - hass.burntbytes.com
  parentRefs:
    - name: app-gateway-production
      namespace: default
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: homeassistant-https
  namespace: homeassistant-prod
spec:
  hostnames:
    - hass.burntbytes.com
  parentRefs:
    - name: app-gateway-production
      namespace: default
      sectionName: https
  rules:
    - backendRefs:
        - name: homeassistant
          port: 8123
